Don't forward deviceChanged signal after device was removed

This was hitting assert in DevicesModel.

BUG: 351051